src/objects/ADvendio__EMailRecipient__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>E-Mail Recipients</relationshipLabel>
        <relationshipName>EMailRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Address__c</fullName>
        <label>Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__EMail__c</fullName>
        <label>E-Mail</label>
        <referenceTo>ADvendio__EMail__c</referenceTo>
        <relationshipLabel>E-Mail Recipients</relationshipLabel>
        <relationshipName>EMailRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TO</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>BCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-Mail Recipient</label>
    <nameField>
        <displayFormat>E-Mail-R-{0}</displayFormat>
        <label>E-Mail Recipient Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E-Mail Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>